feat: define homepage and about page content layout, install swiper slider

--- a/src/app/components/shared/service-card/service-card.html
+++ b/src/app/components/shared/service-card/service-card.html
@@ -1,4 +1,4 @@
-<div class="card w-80 text-[#545454]" [class.shadow-lg]="hasShadow()">
+<div class="card text-[#545454]" [class.shadow-lg]="hasShadow()">
   <div class="image-container w-full mb-4">
     <img [src]="card().imageUrl" [alt]="card().title" class="w-full h-50" />
   </div>
