--- a/src/app/pages/about-me/about-me.html
+++ b/src/app/pages/about-me/about-me.html
@@ -1,1 +1,6 @@
-<p>about-me works!</p>
+<app-page-title title="Chi sono"></app-page-title>
+<app-presentazione-about></app-presentazione-about>
+<app-page-title title="Lo studio"></app-page-title>
+<div class="bg-blue-200 py-8">
+  <app-image-gallery></app-image-gallery>
+</div>
