--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -1,1 +1,9 @@
-<h1 class="text-3xl font-bold underline">Homepage world!</h1>
+<app-hero></app-hero> <app-service-home></app-service-home>
+<app-chi-sono-home></app-chi-sono-home>
+<app-reviews-slider></app-reviews-slider>
+
+<app-more-info
+  text="Prenota ora il tuo trattamento"
+  buttonLabel="Prenota un appuntamento"
+  buttonType="tertiary"
+></app-more-info>
