--- a/src/app/components/shared/opening-times/opening-times.html
+++ b/src/app/components/shared/opening-times/opening-times.html
@@ -1,6 +1,6 @@
 <h3 class="font-bold mb-4">Orari di Apertura</h3>
-<div class="wrapper bg-gray-300 w-60 px-8 py-4">
-  <ul class="">
+<div class="wrapper bg-gray-300 w-full px-8 py-4">
+  <ul class="text-xl">
     @for (item of orariApertura(); track $index) {
 
     <li
