--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -25,9 +25,9 @@
   </div>
   <h2 class="font-bold text-4xl ml-10">Service-card</h2>
   <div class="p-10 flex gap-5 w-full">
-    <app-service-card [hasShadow]="true"></app-service-card>
+    <!-- <app-service-card [hasShadow]="true"></app-service-card>
     <app-service-card></app-service-card>
-    <app-service-card [hasShadow]="true"></app-service-card>
+    <app-service-card [hasShadow]="true"></app-service-card> -->
   </div>
   <h2 class="font-bold text-4xl ml-10">Customer-review</h2>
   <div class="p-10 flex gap-5 w-full">
