--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,70 +1,81 @@
 <div class="bg-[#545454] text-white">
+  <!-- Quick Contacts -->
   <div class="invert-100 text-black">
     <app-quick-contacts></app-quick-contacts>
   </div>
-  <div class="footer-content flex px-4 sm:px-10 md:px-20 py-10">
-    <div class="left flex gap-10 w-full">
-      <div class="logo w-full">
+
+  <!-- Footer Content -->
+  <div
+    class="footer-content grid grid-cols-1 md:grid-cols-2 gap-10 px-4 sm:px-10 md:px-20 py-10"
+  >
+    <!-- Left Section: Logo + Links -->
+    <div class="left grid grid-cols-1 sm:grid-cols-2 gap-10 w-full">
+      <!-- Logo -->
+      <div class="logo flex items-start justify-center sm:justify-start w-full">
         <img
           src="plant.png"
           alt="logo"
-          class="object-fit-contain w-30 hue-rotate-90 bg-white p-3 rounded-full"
+          class="object-contain w-24 sm:w-30 hue-rotate-90 bg-white p-3 rounded-full"
           routerLink="/"
         />
       </div>
-      <div class="link-utili w-full">
-        <h6 class="font-bold capitalize">Link Utili</h6>
-        <ul class="pb-5">
-          @for (link of linkUtili(); track $index) {
 
+      <!-- Links -->
+      <div class="link-utili flex flex-col w-full">
+        <!-- Link Utili -->
+        <h6 class="font-bold capitalize mb-3">Link Utili</h6>
+        <ul class="pb-5 space-y-2">
+          @for (link of linkUtili(); track $index) {
           <li class="capitalize opacity-50 hover:opacity-100">
-            <a [routerLink]="link.link" class="flex"
-              ><img
+            <a [routerLink]="link.link" class="flex items-center gap-2">
+              <img
                 src="right-arrow.svg"
                 alt="right-arrow"
-                class="w-5 object-fit-contain invert"
-              /><span>{{ link.label }}</span></a
-            >
+                class="w-5 h-5 object-contain invert"
+              />
+              <span>{{ link.label }}</span>
+            </a>
           </li>
           }
         </ul>
-        <h6 class="font-bold capitalize">Servizi</h6>
-        <ul>
-          @for (link of servizi(); track $index) {
 
+        <!-- Servizi -->
+        <h6 class="font-bold capitalize mb-3">Servizi</h6>
+        <ul class="space-y-2">
+          @for (link of servizi(); track $index) {
           <li class="capitalize opacity-50 hover:opacity-100">
-            <a [routerLink]="link.link" class="flex"
-              ><img
+            <a [routerLink]="link.link" class="flex items-center gap-2">
+              <img
                 src="right-arrow.svg"
                 alt="right-arrow"
-                class="h-5 object-fit-contain invert"
-              /><span>{{ link.label }}</span></a
-            >
+                class="w-5 h-5 object-contain invert"
+              />
+              <span>{{ link.label }}</span>
+            </a>
           </li>
           }
         </ul>
       </div>
     </div>
+
+    <!-- Right Section: Orari -->
     <div class="right w-full">
       <div class="orari w-full">
-        <h6 class="font-bold capitalize">Orari di apertura</h6>
-        <ul class="w-full">
+        <h6 class="font-bold capitalize mb-3">Orari di apertura</h6>
+        <ul class="w-full space-y-1">
           @for (item of orariApertura(); track $index) {
-
           <li
             class="flex justify-between py-1.5"
             [ngClass]="{
-              ' opacity-100': $index === currentDayIndex,
-              ' opacity-50': $index !== currentDayIndex
+              'opacity-100': $index === currentDayIndex,
+              'opacity-50': $index !== currentDayIndex
             }"
           >
             <span>{{ item.day }}</span>
             @if (item.hours) {
-
             <span>{{ item.hours }}</span>
             }@else{
-
-            <span class="px-3 py-1 bg-gray-900">chiuso</span>
+            <span class="px-3 py-1 bg-gray-900 rounded">chiuso</span>
             }
           </li>
           }
