--- a/src/app/components/shared/customer-review/customer-review.html
+++ b/src/app/components/shared/customer-review/customer-review.html
@@ -1,14 +1,17 @@
-<div class="review flex gap-2 shadow-lg">
-  <div class="image-wrapper w-1/3 flex items-center">
+<div class="review flex gap-2 py-6 px-6 shadow-lg">
+  <div class="image-wrapper rounded-circle flex items-center">
     <img
-      src="https://picsum.photos/200"
-      alt="name"
-      class="object-fit-cover rounded-full h-1/2 m-auto"
+      [src]="`http://localhost:1337${review().avatar?.url}`"
+      [alt]="review().author_name"
+      class="object-fit-cover w-16 h-16 rounded-full m-auto"
     />
   </div>
   <div class="w-2/3 flex flex-col justify-center">
-    <p class="font-bold capitalize">Nome cognome</p>
-    <p class="italic">"Lorem ipsum dolor sit amet consectetur."</p>
+    <p class="font-bold capitalize">{{ review().author_name }}</p>
+    @if (review().content) {
+
+    <p class="italic">"{{ review().content }}"</p>
+    }
     <p class="text-yellow-500">★★★★☆</p>
   </div>
 </div>
