--- a/src/app/components/shared/quick-contacts/quick-contacts.html
+++ b/src/app/components/shared/quick-contacts/quick-contacts.html
@@ -1,20 +1,20 @@
 <div
-  class="w-full flex flex-wrap justify-between items-top px-4 sm:px-10 md:px-20 py-5"
+  class="w-full flex flex-wrap justify-center md:justify-between items-stretch px-4 sm:px-10 md:px-20 py-6 bg-gray-50 text-gray-800"
 >
   @for (item of quickContacts(); track $index) {
   <div
-    class="flex items-center h-full justify-center gap-4 border-r last:border-r-0 py-3 flex-1 min-w-[200px]"
+    class="flex items-center justify-between md:justify-center gap-4 py-4 px-3 border-b md:border-b-0 md:border-r last:border-none flex-1 min-w-[250px] sm:min-w-[300px] md:min-w-[200px]"
   >
-    <span class="w-10 h-10">
+    <span class="w-10 h-10 flex-shrink-0">
       <img
         [src]="item.icon"
         [alt]="item.title"
         class="object-contain w-full h-full"
       />
     </span>
-    <div>
-      <h6 class="font-bold capitalize">{{ item.title }}</h6>
-      <p [innerHTML]="item.description"></p>
+    <div class="text-end md:text-left">
+      <h6 class="font-semibold text-lg capitalize">{{ item.title }}</h6>
+      <p class="text-sm text-gray-600" [innerHTML]="item.description"></p>
     </div>
   </div>
   }
