--- a/src/app/pages/contacts/contacts.html
+++ b/src/app/pages/contacts/contacts.html
@@ -1,1 +1,60 @@
-<p>contacts works!</p>
+<app-page-title title="contatti"></app-page-title>
+
+<div class="px-4 sm:px-6 lg:px-10 py-8">
+  <div class="max-w-6xl mx-auto">
+    <!-- GRID principale -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-10">
+      <!-- COLONNA SINISTRA -->
+      <div class="flex flex-col gap-8">
+        <app-my-services>
+          <ul class="flex flex-col gap-6">
+            @for (info of contactsInfo(); track $index) {
+            <li>
+              <h4 class="text-2xl sm:text-3xl font-semibold">
+                {{ info.title }}
+              </h4>
+              <p class="text-lg sm:text-xl">{{ info.text }}</p>
+            </li>
+            }
+          </ul>
+        </app-my-services>
+
+        <app-opening-times></app-opening-times>
+      </div>
+
+      <!-- COLONNA DESTRA -->
+      <div class="lg:col-span-2 flex flex-col gap-8">
+        <!-- MAPPA -->
+        <div
+          class="w-full h-[300px] sm:h-[400px] md:h-[450px] rounded-xl overflow-hidden shadow-md"
+        >
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5575.39470645768!2d9.11445467602071!3d45.67697567107826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786979eb90e9d6b%3A0xbb7deebc299e0a08!2sVia%20Giuseppe%20Garibaldi%2C%2059%2C%2020823%20Lentate%20sul%20Seveso%20MB!5e0!3m2!1sit!2sit!4v1759916019572!5m2!1sit!2sit"
+            width="100%"
+            height="100%"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+
+        <!-- TESTO INTRODUTTIVO -->
+        <div class="text-center lg:text-left">
+          <h3 class="text-2xl sm:text-3xl font-semibold mb-3">
+            Scrivimi un messaggio
+          </h3>
+          <p class="text-base sm:text-lg text-gray-700 leading-relaxed">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
+            exercitationem ducimus est quod saepe? Fugiat saepe voluptates ullam
+            maiores porro fugit explicabo exercitationem nostrum, animi unde
+            perferendis quis veritatis fuga?
+          </p>
+        </div>
+
+        <!-- FORM -->
+        <app-contacts-form></app-contacts-form>
+      </div>
+    </div>
+  </div>
+</div>
