--- a/src/app/pages/services/services.html
+++ b/src/app/pages/services/services.html
@@ -1,1 +1,16 @@
-<p>services works!</p>
+<app-page-title title="fisioterapia"></app-page-title>
+<div class="wrapper py-6 bg-orange-100 px-4 sm:px-6 lg:px-10">
+  <div class="max-w-6xl mx-auto">
+    <h3 class="text-3xl sm:text-4xl font-bold capitalize">Servizi offerti</h3>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 py-6 gap-6">
+      @for (service of services(); track $index) {
+      <app-service-card
+        [hasShadow]="true"
+        class="bg-white w-full"
+        [service]="service"
+      ></app-service-card>
+      }
+    </div>
+  </div>
+</div>
