--- a/src/app/components/sections/presentazione-about/presentazione-about.html
+++ b/src/app/components/sections/presentazione-about/presentazione-about.html
@@ -7,24 +7,16 @@
         <h3 class="text-3xl sm:text-4xl font-bold capitalize">
           Dott. <strong>Paolo Caristia</strong>
         </h3>
-        <p class="text-lg sm:text-xl">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore animi
-          ex nam architecto ipsam quis quas officia eos ea molestiae optio esse,
-          officiis magni harum ab voluptatem voluptas earum! Fuga? Odit
-          cupiditate...
-        </p>
-        <p class="text-lg sm:text-xl">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore animi
-          ex nam architecto ipsam quis quas officia eos ea molestiae optio esse,
-          officiis magni harum ab voluptatem voluptas earum! Fuga? Odit
-          cupiditate...
-        </p>
+        <div
+          class="flex flex-col gap-6 text-lg sm:text-xl"
+          [innerHTML]="bioTextRichText()"
+        ></div>
       </div>
 
       <!-- Immagine -->
       <div class="image-container lg:col-span-2 w-full">
         <img
-          src="https://picsum.photos/1920/1080"
+          [src]="`http://localhost:1337${bioText().image?.url}`"
           alt=""
           class="w-full h-auto object-cover rounded-lg"
         />
@@ -38,7 +30,7 @@
       </h3>
       <div
         [innerHTML]="curriculumCertificazioni()"
-        class="flex flex-col gap-6"
+        class="flex flex-col gap-6 text-lg sm:text-xl"
       ></div>
     </div>
 
@@ -47,7 +39,12 @@
       <h3 class="text-3xl sm:text-4xl font-bold capitalize">
         Specializzazioni
       </h3>
-      <div [innerHTML]="specializzazioni()" class="flex flex-col gap-6"></div>
+      <div class="flex flex-col gap-6 text-lg sm:text-xl">
+        @for (specialization of specializzazioni(); track $index) {
+        <p class="font-bold pb-0">{{ specialization.title }}</p>
+        <p>{{ specialization.description }}</p>
+        }
+      </div>
     </div>
 
     <!-- Valori -->
@@ -56,7 +53,7 @@
         i miei <strong>Valori</strong>
       </h3>
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-6">
-        @for (value of [1,2,3,4,5]; track $index) {
+        @for (value of valori(); track $index) {
         <div class="flex items-center gap-3">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -69,7 +66,7 @@
               d="M358 0c198 0 359 161 359 359S556 717 358 717S0 557 0 359S160 0 358 0zm-4 132c-10 12-15 26-15 41c0 12 4 22 10 29c7 7 17 11 27 11c14 0 27-6 37-18c9-11 14-27 14-44c0-10-3-19-10-26s-17-11-27-11c-13 0-26 6-36 18zm-91 207l12 13c9-10 18-18 24-23c6-4 11-6 15-6c3 0 6 1 8 3c1 3 2 6 2 11c0 25-3 41-16 101s-20 104-20 133c0 11 2 19 6 24c3 5 9 9 17 9c13 0 32-10 54-27c22-18 44-43 68-75l-13-11c-8 10-16 17-22 22c-6 4-11 8-15 8c-3 0-6-3-8-5c-1-3-2-7-2-13c0-4 1-17 5-40c3-23 2-23 8-57c1-10 4-24 7-41c8-51 13-82 13-92c0-9-3-17-6-22c-4-5-10-7-17-7c-12 0-28 9-50 25c-22 17-44 40-70 70z"
             />
           </svg>
-          <span>Valore {{ value }}</span>
+          <span>{{ value.title }}</span>
         </div>
         }
       </div>
