--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -31,7 +31,7 @@
   </div>
   <h2 class="font-bold text-4xl ml-10">Customer-review</h2>
   <div class="p-10 flex gap-5 w-full">
-    <app-customer-review></app-customer-review>
+    <!-- <app-customer-review></app-customer-review> -->
   </div>
   <h2 class="font-bold text-4xl ml-10 mb-4">page-title</h2>
   <app-page-title title="Titolo Pagina"></app-page-title>
@@ -42,6 +42,16 @@
     buttonType="tertiary"
     buttonLabel="Prenota un appuntamento"
   ></app-more-info>
+
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2784.440781795158!2d9.112368377386005!3d45.74230861483828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786991220ed4cc9%3A0x7dfb11bb27ec2f76!2sLiceo%20Scientifico%20Statale%20Enrico%20Fermi%20Cant%C3%B9!5e0!3m2!1sit!2sit!4v1760297399710!5m2!1sit!2sit"
+    width="600"
+    height="450"
+    style="border: 0"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"
+  ></iframe>
 
   <h2 class="font-bold text-4xl ml-10 mb-4">Blog preview</h2>
 
