--- a/src/app/pages/services-detail/services-detail.html
+++ b/src/app/pages/services-detail/services-detail.html
@@ -9,6 +9,7 @@
         [hasShadow]="true"
         class="bg-white w-full"
         [service]="service"
+        [context]="'service'"
       ></app-service-card>
       }
     </div>
