--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -13,7 +13,10 @@
   <!-- LOGO -->
   <div class="flex items-center h-full">
     <img
-      src="plant.png"
+      [src]="
+        'http://localhost:1337' +
+        generalInfoService.generalInfo()?.site_logo?.url
+      "
       alt="logo"
       class="object-contain w-14 sm:w-20 bg-white p-2 sm:p-3 rounded-full hue-rotate-90 cursor-pointer"
       routerLink="/"
