--- a/src/app/components/shared/service-card/service-card.html
+++ b/src/app/components/shared/service-card/service-card.html
@@ -1,23 +1,19 @@
 <div class="card text-[#545454]" [class.shadow-lg]="hasShadow()">
   <div class="image-container w-full h-50 mb-4 object-fit-cover">
     <img
-      [src]="`http://localhost:1337${service().cover_image?.url}`"
-      [alt]="service().title"
+      [src]="`http://localhost:1337${image()?.url}`"
+      [alt]="title()"
       class="w-full h-full"
     />
   </div>
   <div class="px-4 pb-4">
-    <p class="font-extrabold uppercase">{{ service().title }}</p>
+    <p class="font-extrabold uppercase">{{ title() }}</p>
 
-    @if (service().short_description) {
-    <p class="mb-4">{{ service().short_description }}</p>
-    } @if (service().slug) {
+    @if (subtitle()) {
+    <p class="mb-4">{{ subtitle() }}</p>
+    } @if (slug()) {
     <p>
-      <a
-        [routerLink]="`/servizi-offerti/fisioterapia/${service().slug}`"
-        class="font-bold capitalize"
-        >Scopri di più -></a
-      >
+      <a [routerLink]="link()" class="font-bold capitalize">Scopri di più -></a>
     </p>
     }
   </div>
