--- a/src/app/pages/contacts/contacts.html
+++ b/src/app/pages/contacts/contacts.html
@@ -27,17 +27,8 @@
         <!-- MAPPA -->
         <div
           class="w-full h-[300px] sm:h-[400px] md:h-[450px] rounded-xl overflow-hidden shadow-md"
-        >
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5575.39470645768!2d9.11445467602071!3d45.67697567107826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786979eb90e9d6b%3A0xbb7deebc299e0a08!2sVia%20Giuseppe%20Garibaldi%2C%2059%2C%2020823%20Lentate%20sul%20Seveso%20MB!5e0!3m2!1sit!2sit!4v1759916019572!5m2!1sit!2sit"
-            width="100%"
-            height="100%"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
+          [innerHTML]="mapEmbed()"
+        ></div>
 
         <!-- TESTO INTRODUTTIVO -->
         <div class="text-center lg:text-left">
