--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -18,7 +18,10 @@
 ></app-chi-sono-home>
 } @if (homeData().reviews_section) {
 
-<app-reviews-slider [reviews]="homeData().reviews_section"></app-reviews-slider>
+<app-reviews-slider
+  ngSkipHydration
+  [reviews]="homeData().reviews_section"
+></app-reviews-slider>
 }
 
 <app-more-info
@@ -28,14 +31,4 @@
   (onClick)="handleClick('/contatti')"
 ></app-more-info>
 
-<div class="map w-full h-100 bg-gray-500">
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5575.39470645768!2d9.11445467602071!3d45.67697567107826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786979eb90e9d6b%3A0xbb7deebc299e0a08!2sVia%20Giuseppe%20Garibaldi%2C%2059%2C%2020823%20Lentate%20sul%20Seveso%20MB!5e0!3m2!1sit!2sit!4v1759916019572!5m2!1sit!2sit"
-    width="100%"
-    height="100%"
-    style="border: 0"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"
-  ></iframe>
-</div>
+<div class="map w-full h-100 bg-gray-500" [innerHTML]="mapEmbed()"></div>
