--- a/src/app/pages/services/services.html
+++ b/src/app/pages/services/services.html
@@ -1,4 +1,4 @@
-<app-page-title title="fisioterapia"></app-page-title>
+<app-page-title title="I miei servizi"></app-page-title>
 <div class="wrapper py-6 bg-orange-100 px-4 sm:px-6 lg:px-10">
   <div class="max-w-6xl mx-auto">
     <h3 class="text-3xl sm:text-4xl font-bold capitalize">Servizi offerti</h3>
@@ -8,6 +8,7 @@
       <app-service-card
         [hasShadow]="true"
         class="bg-white w-full"
+        [context]="'category'"
         [service]="service"
       ></app-service-card>
       }
