feat: optimizing components

--- a/src/app/components/sections/chi-sono-home/chi-sono-home.html
+++ b/src/app/components/sections/chi-sono-home/chi-sono-home.html
@@ -8,7 +8,7 @@
       <!-- Immagine -->
       <div class="img-container order-1 md:order-none">
         <img
-          [src]="`http://localhost:1337${aboutHomeData().image?.url}`"
+          [src]="`${aboutHomeData().image?.url}`"
           alt="Foto del fisioterapista"
           class="w-full h-full object-cover rounded-xl shadow-lg aspect-video"
         />
