--- a/src/app/components/sections/hero/hero.html
+++ b/src/app/components/sections/hero/hero.html
@@ -4,7 +4,7 @@
   <!-- Background image -->
   <img
     class="absolute inset-0 w-full h-full object-cover"
-    [src]="`http://localhost:1337${heroData().background?.url}`"
+    [src]="`${heroData().background?.url}`"
     alt="Studio Fisioterapia e Osteopatia"
   />
 
