--- a/src/app/components/sections/presentazione-about/presentazione-about.html
+++ b/src/app/components/sections/presentazione-about/presentazione-about.html
@@ -16,7 +16,7 @@
       <!-- Immagine -->
       <div class="image-container lg:col-span-2 w-full">
         <img
-          [src]="`http://localhost:1337${bioText().image?.url}`"
+          [src]="`${bioText().image?.url}`"
           alt=""
           class="w-full h-auto object-cover rounded-lg"
         />
