--- a/src/app/components/shared/customer-review/customer-review.html
+++ b/src/app/components/shared/customer-review/customer-review.html
@@ -1,7 +1,7 @@
 <div class="review flex gap-2 py-6 px-6 shadow-lg">
   <div class="image-wrapper rounded-circle flex items-center">
     <img
-      [src]="`http://localhost:1337${review().avatar?.url}`"
+      [src]="`${review().avatar?.url}`"
       [alt]="review().author_name"
       class="object-fit-cover w-16 h-16 rounded-full m-auto"
     />
